--- a/index.html
+++ b/index.html
@@ -3,69 +3,83 @@
 
 <head>
     <meta charset="UTF-8">
-    <!-- import your css file -->
+    <link rel="stylesheet" src="./index.css" />
     <link href="https://fonts.googleapis.com/css?family=Gaegu|Roboto" rel="stylesheet">
     <title>Sweet Eats Bakery</title>
 </head>
 
 <body>
-
-    <!-- company name -->
-    Sweet Eats Bakery
-
-    <!-- Navigation -->
-    About
-    Cookies
-    Weddings
-    Catering
-    Contact
+    <header>
     
-    <!-- Image https://tk-assets.lambdaschool.com/bcf76f62-2431-4c22-b466-2e711f3da2b9_ui-i-bakery-main-header.png -->
+    <h1> Sweet Eats Bakery</h1>
 
-    <!-- Marketing header -->
-    About Sweet Eats Bakery
+    
+<nav>
+    <a href="#about" title="About Us">About</a>
+    <a href="#cookies" title="Cookieliciousness">Cookies</a>
+    <a href="#weddings" title="Wedding Treats!">Weddings</a>
+    <a href="#catering" title="Catering">Catering</a>
+    <a href="#contact" title="Contact Us">Contact</a>
+</nav>
+    <img title="Dreams of Sweets" src="https://tk-assets.lambdaschool.com/bcf76f62-2431-4c22-b466-2e711f3da2b9_ui-i-bakery-main-header.png" />
 
-    Marzipan jelly-o macaroon I love macaroon jujubes. Candy candy canes jujubes I love ice cream croissant. Lollipop
+    </header>
+    <section id="about">
+
+    <div id="about">
+    <h2>About Sweet Eats Bakery</h2>
+
+    <p class="about">Marzipan jelly-o macaroon I <em>love</em> macaroon jujubes. Candy candy canes jujubes I love ice cream croissant. Lollipop
     donut icing I love liquorice gummi bears marzipan. Dragée jelly beans apple pie cotton candy lemon drops pastry candy
-    powder.
+    powder. </p>
+    </div>
+</section>
+    <content>
+        <section id="cupcakes">
+    <img title="Cupcakes from Heaven" src="https://tk-assets.lambdaschool.com/297378d6-9c89-430f-9d2e-46ae3d5edce8_ui-i-bakery-cupcake-i.png"  />
+    <h2>Cupcakes</h2>
 
-    <!-- content -->
-    <!-- Image https://tk-assets.lambdaschool.com/297378d6-9c89-430f-9d2e-46ae3d5edce8_ui-i-bakery-cupcake-i.png -->
-    Cupcakes
-
-    Candy apple pie lemon drops sweet roll danish. Tiramisu candy canes jelly-o jelly beans cotton candy pastry pudding
+    <p>Candy apple pie lemon drops sweet roll danish. Tiramisu candy canes jelly-o jelly beans cotton candy pastry pudding
     tootsie roll carrot cake. Dessert sesame snaps brownie lemon drops cookie donut dragée. Toffee pie fruitcake powder
-    gingerbread pudding.
+    gingerbread pudding.</p>
+</section>
+<section id="cookies">
+    <img title="Mmmmmm COOOKIE" src="https://tk-assets.lambdaschool.com/7393a8fd-c8e5-4003-921f-79e0d546d02c_ui-i-bakery-cookies.png" />
+    <h2>Cookies</h2>
 
-    <!-- Image https://tk-assets.lambdaschool.com/7393a8fd-c8e5-4003-921f-79e0d546d02c_ui-i-bakery-cookies.png -->
-    Cookies
+    <p>Cookie soufflé dessert carrot cake fruitcake halvah pudding cake. Marzipan topping bear claw soufflé gingerbread
+    biscuit. Tiramisu gummi bears chocolate bar sugar plum icing muffin cake jelly-o icing.</p>
+</section>
+     <img title="Party-Perfect Catering" src="https://tk-assets.lambdaschool.com/ab0cb095-5900-476c-b042-aea065d3dbbf_ui-i-bakery-celebrate.png" />
+    <section id="catering">
+     <h2>Catering</h2>
 
-    Cookie soufflé dessert carrot cake fruitcake halvah pudding cake. Marzipan topping bear claw soufflé gingerbread
-    biscuit. Tiramisu gummi bears chocolate bar sugar plum icing muffin cake jelly-o icing.
-
-     <!-- Image https://tk-assets.lambdaschool.com/ab0cb095-5900-476c-b042-aea065d3dbbf_ui-i-bakery-celebrate.png -->
-    Catering
-
-    Sweet jelly-o apple pie powder jelly beans. Pastry sweet roll cake jujubes halvah soufflé brownie. Toffee cookie
+    <p>Sweet jelly-o apple pie powder jelly beans. Pastry sweet roll cake jujubes halvah soufflé brownie. Toffee cookie
     lemondrops jelly beans chocolate bar. Wafer muffin jujubes danish tart danish chocolate wafer.
+</p>
+</section>
+</content>
+<address id="contact">
+    <h2>Contact</h2>
 
-    Contact
-
-    yum@sweeteatsbakery.com
-    202-555-0144
+    <a href="mailto:yum@sweeteatsbakery.com">yum@sweeteatsbakery.com</a>
+    <a href="tel:202-555-0144">(202) 555-0144</a>
     4209 Bobcat Drive
     Madison, WI, 48219
-
-    <!-- footer -->
-    Sweet Eats Bakery
-
-    About
-    Cookies
-    Weddings
-    Catering
-    Contact
-
+</address>
+<footer>
+    <section class="footer-content">
+    <h3>Sweet Eats Bakery</h3>
+<nav>
+    <a href="#about" title="About Us">About</a>
+    <a href="#cookies" title="Cookieliciousness">Cookies</a>
+    <a href="#weddings" title="Wedding Treats!">Weddings</a>
+    <a href="#catering" title="Catering">Catering</a>
+    <a href="#contact" title="Contact Us">Contact</a>
+</nav>
     Copyright Sweet Eats 2018
+</section>
+</footer>
 </body>
 
 </html>
